small dialogs security fixes

--- a/music-cloud-web/src/main/web/src/app/components/dialog/dialog.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/dialog/dialog.component.css
@@ -1,11 +1,12 @@
 .dialog {
     display: flex;
     flex-direction: column;
+    height: calc(100vh - 114px);
 }
 
 .messages {
     overflow: auto;
-    height: calc(100vh - 191px);
+    height: 100%;
 }
 
 .sender {
